--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <head>
-
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 
 <body>
     
 
-
+    <script src="pixi.js"></script>
     <script src ="sockets.js"></script>
     <script src="game.js"></script>
 </body>
