--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,6 @@
     
 
     <script src="pixi.js"></script>
-    <script src ="sockets.js"></script>
-    <script src="game.js"></script>
+    <script src ="colyseus.js"></script>
+    <script src="game1.js"></script>
 </body>
