added a viewport so the whole world is moving around a single point

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
     
 
     <script src="pixi.js"></script>
-    <script src ="colyseus.js"></script>
+    <script src="pixi-viewport.js"></script>
+    <script src="colyseus.js"></script>
     <script src="game1.js"></script>
 </body>
